Update  Hotel booking.Rmd

--- a/Hotel booking.Rmd
+++ b/Hotel booking.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "CS 422"
+title: "Hotel Booking Prediction Model"
 output: 
   html_notebook:
     toc: yes
     toc_float: yes
-author: Vijay K. Gurbani, Ph.D., 
-        Illinois Institute of Technology
+author: Nimay Srinivasn
 ---
 
 <!-- More information in R Markdown can be found at:
